public/css/master.css
/*FULL SIZE AND ONLY DIV SCROLL!*/


/*this does not work on safari, safari is new internet explorer confirmed*/

html, body {
  height: 100%;
  margin: 0;
  overflow: hidden; /*workaround for windows scrollbars adding to the height*/
}

.row {
  margin: 0;

}

.box {
  display: flex;
  flex-flow: column;
  height: 100%;
  padding: 0;
}

.box .row.header {
  flex: 0 1 auto;
  /* The above is shorthand for:
  flex-grow: 0,
  flex-shrink: 1,
  flex-basis: auto
  */
}

.box .row.content {
  position: relative;
  flex: 1 1 1px;
  overflow-y: auto;
}

@media (min-width: 768px) {
  .codebox {
    height: 100%;
    overflow: scroll;
  }
}

.box .row.footer {
  flex: 0 1 1.5em; /*RESIZE HERE IF NEEDED*/
  background-color: rgb(98, 98, 98);
}


/* END FLEXBOX CONFIG */

.navbar {
  /*margin-bottom: 0;*/
}


/*LINE NUMBERS*/

.hljs-line-numbers {
  text-align: right;
  border-right: 1px solid #ccc;
  color: #999;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}


/*marker highlighting*/

.INSERT {
  background-color: rgba(155, 245, 144, 0.7);
  /*color: white;*/
  text-shadow: none;
  /*padding: 1px;

    margin: 1px;*/
  /*border: 1px dotted grey;*/
}

.MOVE {
  background-color: rgba(238, 135, 244, 0.7);
  text-shadow: none;
  padding: 1px;
  margin: 1px;
  cursor: pointer;
}

.MOVE:hover:not(.selected) {
  border: 1px dotted rgba(192, 5, 203, 1);
}

.UPDATE {
  background-color: rgba(222, 250, 110, 0.7);
  text-shadow: none;
  padding: 1px;
  margin: 1px;
  cursor: pointer;
}

.UPDATE:hover:not(.selected) {
  border: 1px dotted rgba(204, 255, 0, 1);

}

.DELETE {
  background-color: rgba(232, 118, 118, 0.7);
  text-shadow: none;
  padding: 1px;
  margin: 1px;
}

.codebox {
  padding-right: 0;
  padding-left: 0;
}

pre {
  padding: 0;
}

/* selected element style */

.selected {
  border: 2px solid black;
  z-index: 100;
  position:relative;
  padding: 2px;
  font-weight: bold;
}

/* accordion nav */

#accordion .glyphicon { margin-right:10px; }
.panel-collapse>.list-group .list-group-item:first-child {border-top-right-radius: 0;border-top-left-radius: 0;}
.panel-collapse>.list-group .list-group-item {border-width: 1px 0;}
.panel-collapse>.list-group {margin-bottom: 0;}
.panel-collapse .list-group-item {border-radius:0;}

.panel-collapse .list-group .list-group {margin: 0;margin-top: 10px;}
.panel-collapse .list-group-item li.list-group-item {margin: 0 -15px;border-top: 1px solid #ddd !important;border-bottom: 0;padding-left: 30px;}
.panel-collapse .list-group-item li.list-group-item:last-child {padding-bottom: 0;}

.panel-collapse div.list-group div.list-group{margin: 0;}
.panel-collapse div.list-group .list-group a.list-group-item {border-top: 1px solid #ddd !important;border-bottom: 0;padding-left: 30px;}
.panel-collapse .list-group-item li.list-group-item {border-top: 1px solid #DDD !important;}

.modal-dialog {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

.modal-content {
  position: relative;
  height: auto;
  min-height: 100%;
  border-radius: 0;
}

.panel-heading {
  cursor: pointer;
}

.skill-unit .bar .progress { background: #24ff09; }
.skill-unit .bar .progress span { color: #24ff09; background: #24ff09 );

#diffsViewer
{
  max-height: 500px !important
}

